accuknox/multi-cluster-setup-helper.v2/k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: accuknox-multi-cluster-helper-webhook
spec:
  replicas: 1
  selector:
    matchLabels:
      app: accuknox-multi-cluster-helper-webhook
  template:
    metadata:
      labels:
        app: accuknox-multi-cluster-helper-webhook
    spec:
      containers:
      - name: accuknox-multi-cluster-helper-webhook
        image: safeeraccuknox/demo:accuknox-multi-cluster-setup-helper-919f898
        imagePullPolicy: Always
        ports:
        - containerPort: 5000
        volumeMounts:
        - name: certs-volume
          readOnly: true
          mountPath: "/certs"
        volumes:
        - name: certs-volume
          secret:
            secretName: accuknox-multi-cluster-helper-webhook-tls
