accuknox/multi-cluster-setup-helper.v2/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mutating-webhook
  namespace: default
spec:
  ports:
    - port: 5000
      targetPort: 5000
  selector:
    app: mutating-webhook
