accuknox/multi-cluster-setup-helper.v2/k8s/mutating-webhook.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: MutatingWebhookConfiguration
metadata:
  name: accuknox-multi-cluster-helper-webhook
webhooks:
- name: accuknox-multi-cluster-helper-webhook.agents.svc
  matchPolicy: Equivalent
  admissionReviewVersions: ["v1"]
  sideEffects: None
  rules:
  - operations: ["CREATE", "UPDATE"]
    apiGroups: [""]
    apiVersions: ["v1"]
    resources: ["configmaps"]
    scope: "Namespaced"
  failurePolicy: Fail
  timeoutSeconds: 20
  clientConfig:
    # intended for demonstration purposes only and should be regarded as insecure.
    caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSUQzVENDQXNXZ0F3SUJBZ0lVSWJTQk9yZFk5K1ZRdnNCdW9ES2JsamhDQU5Fd0RRWUpLb1pJaHZjTkFRRUwKQlFBd2ZqRUxNQWtHQTFVRUJoTUNWVk14RGpBTUJnTlZCQWdNQlZOMFlYUmxNUTB3Q3dZRFZRUUhEQVJEYVhSNQpNUlV3RXdZRFZRUUtEQXhQY21kaGJtbDZZWFJwYjI0eE9UQTNCZ05WQkFNTU1HRmpZM1ZyYm05NExXMTFiSFJwCkxXTnNkWE4wWlhJdGFHVnNjR1Z5TFhkbFltaHZiMnN1WVdkbGJuUnpMbk4yWXpBZUZ3MHlOREE1TWpZeE1UQTEKTWpSYUZ3MHlOVEE1TWpZeE1UQTFNalJhTUg0eEN6QUpCZ05WQkFZVEFsVlRNUTR3REFZRFZRUUlEQVZUZEdGMApaVEVOTUFzR0ExVU [...]
    service:
      namespace: agents
      name: accuknox-multi-cluster-helper-webhook
      path: /mutate
      port: 5000
